--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
 <body>
     <header id="header-content">
         <div class="header-item">
-            <h3 onclick="window.location.href=`https:\/\/github.com/Coenicorn/varsity-winners`" class="big-button" id="source">Bekijk de bron</h3>
+            <h3 onclick="window.location.href=`https:\/\/github.com/Coenicorn/varsity-winners`" class="big-button" id="source">Bron</h3>
         </div>
 
         <div class="header-item">
@@ -37,7 +37,7 @@
         </div>
 
         <div class="header-item">
-            <h3 onclick="window.location.href = '/contribute'" id="contribute" class="big-button">Help ons verbeteren!</h3>
+            <h3 onclick="window.location.href = '/contribute'" id="contribute" class="big-button">Help ons!</h3>
         </div>
     </header>
 
