--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="/assets/css/shared.css">
     <link rel="stylesheet" href="/assets/css/index.css">
 </head>
-<body>
+<body class="hidden">
     <header id="header-content">
         <div class="header-item">
             <h3 onclick="window.location.href=`https:\/\/github.com/Coenicorn/varsity-winners`" class="big-button" id="source">Bron</h3>
@@ -48,5 +48,8 @@
     <footer>
         <p>© Coen Bleumers 2024</p>
     </footer>
+    <script>
+        document.addEventListener("DOMContentLoaded", ()=>document.body.classList.remove("hidden"));
+    </script>
 </body>
 </html>
