prevent flash of unstyled content

--- a/html/index.html
+++ b/html/index.html
@@ -51,8 +51,6 @@
     <footer>
         <p>© Coen Bleumers 2024</p>
     </footer>
-    <script>
-        document.addEventListener("DOMContentLoaded", ()=>document.body.classList.remove("hidden"));
-    </script>
+    <script src="/assets/shared.js"></script>
 </body>
 </html>
