--- a/html/404.html
+++ b/html/404.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-        <h1 id="not-found-text">404 - Page not found</h1>
+        <h1 id="not-found-text"><p>404</p><p>Page not found</p></h1>
     </main>
 
     <footer>
