--- a/html/404.html
+++ b/html/404.html
@@ -41,7 +41,10 @@
     </header>
 
     <main>
-        <h1 id="not-found-text"><p>404</p><p>Page not found</p></h1>
+        <div id="not-found">
+            <h1 id="not-found-text"><p>404</p><p>Page not found</p></h1>
+            <a href="/"><p>back→</p></a>
+        </div>
     </main>
 
     <footer>
