--- a/html/404.html
+++ b/html/404.html
@@ -28,7 +28,7 @@
 <body>
     <header id="header-content">
         <div class="header-item">
-            <h3 onclick="window.location.href=`https:\/\/github.com/Coenicorn/varsity-winners`" class="big-button" id="source">Bekijk de bron</h3>
+            <h3 onclick="window.location.href=`https:\/\/github.com/Coenicorn/varsity-winners`" class="big-button" id="source">bron</h3>
         </div>
 
         <div class="header-item">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="header-item">
-            <h3 onclick="window.location.href = '/contribute'" id="contribute" class="big-button">Help ons verbeteren!</h3>
+            <h3 onclick="window.location.href = '/contribute'" id="contribute" class="big-button">Help ons!</h3>
         </div>
     </header>
 
