--- a/html/404.html
+++ b/html/404.html
@@ -28,7 +28,7 @@
 <body>
     <header id="header-content">
         <div class="header-item">
-            <h3 onclick="window.location.href=`https:\/\/github.com/Coenicorn/varsity-winners`" class="big-button" id="source">bron</h3>
+            <h3 onclick="window.location.href=`https:\/\/github.com/Coenicorn/varsity-winners`" class="big-button" id="source">Bron</h3>
         </div>
 
         <div class="header-item">
